--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
-streamlit==1.32.2
-pandas==2.2.2
-plotly==5.21.0
-seaborn==0.13.2
-matplotlib==3.8.4
-scikit-learn==1.4.2
-joblib==1.4.0
+streamlit
+pandas
+plotly
+seaborn
+matplotlib
+statsmodels
+scikit-learn
+numpy
+openpyxl
